image and gallery

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,16 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "file-system": "^2.2.2",
+    "list-react-files": "^0.2.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-grid-gallery": "^0.5.5",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "readdir": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
