--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>backend</name>
-	<description>Demo project for Spring Boot</description>
+	<description>By Me For Me backend</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -25,11 +25,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+			<artifactId>spring-boot-starter-data-rest</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 
 		<dependency>
@@ -48,7 +48,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-	</dependencies>
+ </dependencies>
 
 	<build>
 		<plugins>
