--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,9 @@ matrix:
       before_script: cd frontend
       script:
         - npm install
-        - npm run build
-        - npm start
+        - CI=false npm run build
     - language: java
-      jdk: oraclejdk8
+      jdk: oraclejdk11
       before_script: cd ../backend
       script:
         - ./mvnw clean install
-        - ./mvnw spring-boot:run
