--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,13 @@
 					<artifactId>junit-vintage-engine</artifactId>
 				</exclusion>
 			</exclusions>
-		</dependency>
+		</dependency> 
+ 
+   <dependency>
+     <groupId>org.springframework</groupId>
+     <artifactId>spring</artifactId>
+     <version>2.5.6.SEC03</version>
+   </dependency>
  </dependencies>
 
 	<build>
